Compiler/src/main/java/Testing/Tests/SemanticTests/failing/DuplicateConstructor.ru
struct B{}
impl B{
.(){}
.(Int a){}}
start{}